--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0"
-  },
   "name": "fcc-jsninja",
   "description": "Trabalho final do Curso de JavaScript Ninja",
   "version": "1.0.0",
   "main": ".eslintrc.js",
   "scripts": {
     "babel": "babel js/app.js --watch --out-file js/bundle.js",
-    "browserfy": "browserify js/app.js -t babelify --outfile js/bundle.js"
+    "watchify": "watchify js/app.js  -o js/bundle.js -t -v [ babelify --presets [env] ]"
   },
   "repository": {
     "type": "git",
@@ -27,6 +21,20 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
-    "browserify": "^15.2.0"
+    "browserify": "^15.2.0",
+    "watchify": "^3.9.0",
+    "babel-polyfill": "^6.26.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify", {
+          "presets": ["env"]
+        }
+      ]
+    ]
   }
 }
