Modularized to App, Car and UI

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "babel": "babel js/app.js --watch --out-file js/bundle.js",
-    "watchify": "watchify js/index.js  -o js/bundle.js -t -v [ babelify --presets [env] ]"
+    "watchify": "watchify js/app.js  -o js/bundle.js -t -v [ babelify --presets [env] ]"
   },
   "repository": {
     "type": "git",
